[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/main_menu/game_title.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/main_menu/tutorial_title.png" type="Texture" id=3]
[ext_resource path="res://assets/main_menu/exit.png" type="Texture" id=4]
[ext_resource path="res://assets/main_menu/version.png" type="Texture" id=5]
[ext_resource path="res://assets/main_menu/game_start.png" type="Texture" id=6]
[ext_resource path="res://Player/Image/backgroundHigh.png" type="Texture" id=7]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 0.004
anchor_bottom = 0.006
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 120
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 120.0
margin_right = 1358.0
margin_bottom = 1032.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = -195.0
margin_top = -40.0
margin_right = 1370.0
margin_bottom = 1153.0
rect_pivot_offset = Vector2( 1232.62, 291.895 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_right = 1358.0
margin_bottom = 1032.0
mouse_filter = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1034.0
margin_bottom = 1032.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 1034.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 471.281, 364.618 )
texture = ExtResource( 1 )
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 537.0
margin_right = 1034.0
margin_bottom = 1032.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="NewGame" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 1034.0
margin_bottom = 145.0
texture = ExtResource( 6 )
stretch_mode = 3
script = ExtResource( 2 )

[node name="Tutorial" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 1034.0
margin_bottom = 320.0
texture = ExtResource( 3 )
stretch_mode = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 1034.0
margin_bottom = 495.0
texture = ExtResource( 4 )
stretch_mode = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 1038.0
margin_right = 1238.0
margin_bottom = 1032.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Version" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 485.0
margin_right = 200.0
margin_bottom = 547.0
texture = ExtResource( 5 )
stretch_mode = 3

[connection signal="gui_input" from="HBoxContainer/VBoxContainer/VBoxContainer/NewGame" to="HBoxContainer/VBoxContainer/VBoxContainer/NewGame" method="_on_NewGame_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/VBoxContainer/Tutorial" to="HBoxContainer/VBoxContainer/VBoxContainer/NewGame" method="_on_Tutorial_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/VBoxContainer/Exit" to="HBoxContainer/VBoxContainer/VBoxContainer/NewGame" method="_on_Exit_gui_input"]
